--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "morrow/project-docs",
 	"type": "project",
-    "description": "The skeleton for your next project",
+    "description": "The documentation for the Morrow PHP framework",
     "license": "LGPL-3.0",
 	"require": {
 		"php": ">=5.3",
