--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,18 @@
 	"name": "morrow/docs",
 	"type": "project",
     "description": "The documentation for the Morrow PHP framework.",
-    "license": "LGPL-3.0",
+    "license": "GPL-3.0",
 	"require": {
 		"php": ">=5.3",
         "morrow/core": "dev-master",
 		"michelf/php-markdown": "1.3.*"
-	}
+	},
+    "autoload": {
+        "psr-0": {
+            "": "app/libraries/"
+        },
+        "psr-4": {
+            "App\\Models\\": "app/models/"
+        }
+    }
 }
