--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
             "": "app/libraries/"
         },
         "psr-4": {
-            "App\\Models\\": "app/models/"
+            "App\\Models\\": "app/models/",
+            "Morrow\\": "../main/vendor/morrow/core/src/"
         }
     }
 }
