--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
             "": "app/libraries/"
         },
         "psr-4": {
-            "App\\Models\\": "app/models/"
+            "app\\": "app/"
         }
     }
 }
