--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,10 @@ RewriteEngine on
 	# You should not need to do any changes here
 
 
+# Map feature public requests to the correct subfolder
+# ----------------------------------------
+RewriteRule features/([^/]+)/public/(.+) app/features/$1/public/$2 [L]
+
 # Map all requests to the public subfolder
 # ----------------------------------------
 RewriteCond %{REQUEST_URI} !^public/
