--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-3.0",
 	"require": {
 		"php": ">=5.4",
-        "morrow/core": "~1",
+        "morrow/core": "dev-master",
 		"michelf/php-markdown": "1.3.*"
 	},
     "autoload": {
