--- a/.htaccess
+++ b/.htaccess
@@ -24,15 +24,18 @@ RewriteEngine on
 	# RewriteRule !(maintenance\.htm|.+\.(gif|jpg|css)) /maintenance.htm [R]
 
 
+# Set rewrite base. The slash before $1 simulates a "RewriteBase /"
+# ---------------------------------------------------------------------------------------------
+RewriteBase /
+#RewriteCond %{REQUEST_URI} !/public/
+#RewriteCond %{HTTP_HOST} \.[a-z]{2,}$
+#RewriteRule ^(.*)$ /$1
+
+
 # This section is for redirecting ALL requests to the public folder
 # ---------------------------------------------------------------------------------------------
 RewriteCond %{REQUEST_URI} !/public/
 RewriteRule ^(.*)$ public/$1 [L]
-
-# Set rewrite base. The slash before $1 simulates a "RewriteBase /"
-RewriteCond %{REQUEST_URI} !/public/
-RewriteCond %{HTTP_HOST} \.[a-z]{2,}$
-RewriteRule ^(.*)$ /$1
 
 
 # Map all non framework (eg. assets) requests to the public/ subfolder (also features)
