--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,19 @@
 {
-	"name": "morrow/docs",
-	"type": "project",
-    "description": "The documentation for the Morrow PHP framework.",
-    "license": "GPL-3.0",
-	"require": {
-		"php": ">=5.4",
-        "morrow/core": "dev-master",
-		"michelf/php-markdown": "1.3.*"
-	},
+    "name": "morrow/framework",
+    "type": "project",
+    "description": "A clean project to start building your awesome app.",
+    "license": "proprietary",
+    "require": {
+        "php": ">=5.4",
+        "morrow/core": "~1",
+        "michelf/php-markdown": "1.3.*"
+    },
     "autoload": {
         "psr-0": {
-            "": "app/libraries/"
-        },
+            "": "libraries/"
+            },
         "psr-4": {
-            "app\\": "app/"
+            "app\\": "./"
         }
     }
 }
